--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 
 <head>
 	<meta charset="utf-8">
-	<title>Example Title</title>
-	<meta name="author" content="Your Name">
-	<meta name="description" content="Example description">
+	<title>Katjes SaLT Fisk</title>
+	<meta name="author" content="Mae">
+	<meta name="description" content="KATJES Salte Fisk Den originale lakrids fra Tyskland - salte fisk med salmiak. De er gluten og laktosefri!">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="css/style.css">
 	<link rel="icon" type="image/x-icon" href=""/>
 </head>
 
