--- a/index.html
+++ b/index.html
@@ -9,12 +9,75 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="icon" type="image/x-icon" href=""/>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
 </head>
-
 <body>
-	<header></header>
+	<header id="landingHeader">
+        <!-- Navigationsmenu -->
+            <nav id="menu">
+                <a href="#nav-toggle" class="material-icons" id="closeNav">
+                    close
+                </a>
+                <a id="logo" href="/">
+                    <img
+                        src="/images/Katjes-1.png"
+                        alt="Katjes logo"
+                    />
+                </a>
+                <ul id="menuPunkter">
+                    <li>
+                        <a href="/hjem.html"> Hjem</a>
+                    </li>
+                    <li>
+                        <a href="/saltfisk.html"> Salt fisk</a>
+                    </li>
+                    <li id="logoTopDesktop">
+                        <a href="/">
+                            <img
+                                src="/images/Katjes-1.png"
+                                alt="Katjes Logo"
+                            />
+                        </a>
+                    </li>
+                    <li>
+                        <a href="/contact.html"> Contact</a>
+                    </li>
+                    <li>
+                        <a href="/shop.html"> Shop</a>
+                    </li>
+                </ul>
+            </nav>
+            <a href="#menu" class="material-icons" id="openNav">
+                menu
+            </a>
+            <a id="logoTop" href="/">
+                <img
+                    src="/images/Katjes-1.png"
+                    alt="Katjes Logo"
+                />
+            </a>
+    </header>
 	<main></main>
-	<footer></footer>
+	<footer>
+    <div class="footer">
+                <div id="textfooter">
+                    <p>Kontakt</p>
+                    <p>FAQ</p>
+                    <p>Sitemap</p>
+                    <p> &#169; 2020. All rights deserverd.</p>  
+                </div>
+                <div id="socialmedie">
+                    <a class="icons" href="/">
+                        <img src="images/Facebook-1.png" alt="fb" />
+                    </a>
+                    <a class="icons" href="/">
+                        <img src="images/instagram.png" alt="instagram" />
+                    </a>
+
+                </div>
+            </div>
+    
+    </footer>
 	<script type="text/javascript" src=""></script>
 </body>
 
