--- a/index.html
+++ b/index.html
@@ -1,41 +1,46 @@
 <!DOCTYPE html>
-<html lang="">
+<html lang="da">
+    <head>
+        <meta charset="utf-8" />
+        <title>Katjes Salt Fisk</title>
+        <meta name="author" content="Mae" />
+        <meta
+            name="description"
+            content="KATJES Salte Fisk Den originale lakrids fra Tyskland - salte fisk med salmiak. De er gluten og laktosefri!"
+        />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" href="/css/style.css" />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap"
+            rel="stylesheet"
+        />
+    </head>
 
-<head>
-	<meta charset="utf-8">
-	<title>Katjes SaLT Fisk</title>
-	<meta name="author" content="Mae">
-	<meta name="description" content="KATJES Salte Fisk Den originale lakrids fra Tyskland - salte fisk med salmiak. De er gluten og laktosefri!">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="css/style.css">
-	<link rel="icon" type="image/x-icon" href=""/>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
-</head>
-<body>
-	<header id="landingHeader">
-        <!-- Navigationsmenu -->
+    <body>
+        <header id="landingHeader">
+            <!-- Navigationsmenu -->
             <nav id="menu">
                 <a href="#nav-toggle" class="material-icons" id="closeNav">
                     close
                 </a>
                 <a id="logo" href="/">
                     <img
-                        src="/images/Katjes-1.png"
-                        alt="Katjes logo"
+                        src="/images/logo-mette.png"
+                        alt="Mette Bjerg Studio Logo"
                     />
                 </a>
                 <ul id="menuPunkter">
                     <li>
-                        <a href="/hjem.html"> Hjem</a>
+                        <a href="/about.html"> About</a>
                     </li>
                     <li>
-                        <a href="/saltfisk.html"> Salt fisk</a>
+                        <a href="/gallery.html"> Gallery</a>
                     </li>
                     <li id="logoTopDesktop">
                         <a href="/">
                             <img
-                                src="/images/Katjes-1.png"
-                                alt="Katjes Logo"
+                                src="/images/logo-mette.png"
+                                alt="Mette Bjerg Studio Logo"
                             />
                         </a>
                     </li>
@@ -52,33 +57,46 @@
             </a>
             <a id="logoTop" href="/">
                 <img
-                    src="/images/Katjes-1.png"
-                    alt="Katjes Logo"
+                    src="/images/logo-mette.png"
+                    alt="Mette Bjerg Studio Logo"
                 />
             </a>
-    </header>
-	<main></main>
-	<footer>
-    <div class="footer">
+        </header>
+        <main id="landingMain">
+            <section class="subpages">
+                <div class="subpage" id="landing1">
+                    <a href="/about.html">About</a>
+                </div>
+                <div class="subpage" id="landing2">
+                    <a href="/gallery.html" id="article2">Gallery</a>
+                </div>
+                <div class="subpage" id="landing3">
+                    <a href="/contact.html" id="article3">Contact</a>
+                </div>
+            </section>
+        </main>
+
+        <footer>
+            <div class="footer">
                 <div id="textfooter">
-                    <p>Kontakt</p>
+                    <p>Kunderservice</p>
                     <p>FAQ</p>
-                    <p>Sitemap</p>
+                    <p>Kontakt</p>
                     <p> &#169; 2020. All rights deserverd.</p>  
                 </div>
                 <div id="socialmedie">
                     <a class="icons" href="/">
-                        <img src="images/Facebook-1.png" alt="fb" />
+                        <img src="images/fb-black.svg" alt="fb" />
                     </a>
                     <a class="icons" href="/">
-                        <img src="images/instagram.png" alt="instagram" />
+                        <img src="images/instagram.svg" alt="instagram" />
                     </a>
 
+                    <a class="icons" href="/">
+                        <img src="images/E-mail.png" alt="e-mail" />
+                    </a>
                 </div>
             </div>
-    
-    </footer>
-	<script type="text/javascript" src=""></script>
-</body>
-
+        </footer>
+    </body>
 </html>
