--- a/index.html
+++ b/index.html
@@ -25,30 +25,30 @@
                 </a>
                 <a id="logo" href="/">
                     <img
-                        src="/images/logo-mette.png"
-                        alt="Mette Bjerg Studio Logo"
+                        src="images/Katjes-1.png"
+                        alt="Katjes Logo"
                     />
                 </a>
                 <ul id="menuPunkter">
                     <li>
-                        <a href="/about.html"> About</a>
+                        <a href="/hjem.html"> Hjem</a>
                     </li>
                     <li>
-                        <a href="/gallery.html"> Gallery</a>
+                        <a href="/saltfisk.html"> Salt Fisk</a>
                     </li>
                     <li id="logoTopDesktop">
                         <a href="/">
                             <img
-                                src="/images/logo-mette.png"
-                                alt="Mette Bjerg Studio Logo"
+                                src="images/Katjes-1.png"
+                                alt="Katjes Logo"
                             />
                         </a>
                     </li>
                     <li>
-                        <a href="/contact.html"> Contact</a>
+                        <a href="/om%20os.html"> Om os</a>
                     </li>
                     <li>
-                        <a href="/shop.html"> Shop</a>
+                        <a href="kontakt.html"> Kontakt</a>
                     </li>
                 </ul>
             </nav>
@@ -57,23 +57,13 @@
             </a>
             <a id="logoTop" href="/">
                 <img
-                    src="/images/logo-mette.png"
-                    alt="Mette Bjerg Studio Logo"
+                    src="images/Katjes-1.png"
+                    alt="Katjes Logo"
                 />
             </a>
         </header>
         <main id="landingMain">
-            <section class="subpages">
-                <div class="subpage" id="landing1">
-                    <a href="/about.html">About</a>
-                </div>
-                <div class="subpage" id="landing2">
-                    <a href="/gallery.html" id="article2">Gallery</a>
-                </div>
-                <div class="subpage" id="landing3">
-                    <a href="/contact.html" id="article3">Contact</a>
-                </div>
-            </section>
+
         </main>
 
         <footer>
@@ -92,9 +82,6 @@
                         <img src="images/instagram.svg" alt="instagram" />
                     </a>
 
-                    <a class="icons" href="/">
-                        <img src="images/E-mail.png" alt="e-mail" />
-                    </a>
                 </div>
             </div>
         </footer>
