--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="stylesheet" href="/css/style.css" />
         <link
-            href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap"
+            href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
             rel="stylesheet"
         />
     </head>
@@ -30,9 +30,6 @@
                     />
                 </a>
                 <ul id="menuPunkter">
-                    <li>
-                        <a href="/hjem.html"> Hjem</a>
-                    </li>
                     <li>
                         <a href="/saltfisk.html"> Salt Fisk</a>
                     </li>
@@ -69,19 +66,20 @@
         <footer>
             <div class="footer">
                 <div id="textfooter">
-                    <p>Kunderservice</p>
+                    <p>Kundeservice</p>
                     <p>FAQ</p>
                     <p>Kontakt</p>
                     <p> &#169; 2020. All rights deserverd.</p>  
                 </div>
                 <div id="socialmedie">
                     <a class="icons" href="/">
-                        <img src="images/fb-black.svg" alt="fb" />
+                        <img src="/images/Facebook-1.png" alt="fb" />
                     </a>
                     <a class="icons" href="/">
-                        <img src="images/instagram.svg" alt="instagram" />
+                        <img src="/images/instagram.png" alt="instagram" />
                     </a>
 
+                  
                 </div>
             </div>
         </footer>
