--- a/index.html
+++ b/index.html
@@ -60,6 +60,12 @@
             </a>
         </header>
         <main id="landingMain">
+            <section id="indhold">
+                <h1 id="contact"></h1>
+                 
+        </section>
+            
+        <img src="images/mobilhjem1.jpg">
 
         </main>
 
