--- a/kontakt.html
+++ b/kontakt.html
@@ -87,8 +87,8 @@
             <div class="footer">
                 <div id="textfooter">
                     <p>Kundeservice</p>
-                    <p>Returns</p>
-                    <p>Contact</p>
+                    <p>FAQ</p>
+                    <p>Kontakt</p>
                     <p> &#169; 2020. All rights deserverd.</p>  
                 </div>
                 <div id="socialmedie">
