--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                         <img src="/images/fb.png" alt="fb" />
                     </a>
                     <a class="icons" href="/">
-                        <img src="images/insta.png" alt="instagram" />
+                        <img src="/images/insta.png" alt="instagram" />
                     </a>
 
                   
