--- a/saltfisk.html
+++ b/saltfisk.html
@@ -74,10 +74,10 @@
                 </div>
                 <div id="socialmedie">
                     <a class="icons" href="/">
-                        <img src="images/Facebook-1.png" alt="fb" />
+                        <img src="/images/fb.png" alt="fb" />
                     </a>
                     <a class="icons" href="/">
-                        <img src="images/instagram.png" alt="instagram" />
+                        <img src="images/insta.png" alt="instagram" />
                     </a>
                 </div>
             </div>
