--- a/om os.html
+++ b/om os.html
@@ -65,7 +65,12 @@
          <main>
              <section id="indhold">
                 <h1 id="contact">Om os</h1>
-                 
+                 <div class="gallery">
+                     
+                <div id="gallery1">
+                    <img src="images/v%C3%A6rdier%201-1%20kopi.png" alt="Værdier"/>
+                </div>
+                </div>      
         </section>
         </main>
          <footer>
