--- a/om os.html
+++ b/om os.html
@@ -69,6 +69,7 @@
                      
                 <div id="gallery1">
                     <img src="images/v%C3%A6rdier%201-1%20kopi.png" alt="Værdier"/>
+                     <img src="/images/V%C3%A6rdier%202-1.png" alt="Værdier 2">
                 </div>
                 </div>      
         </section>
