--- a/index.html
+++ b/index.html
@@ -34,8 +34,12 @@
                     />
                 </a>
                 <ul id="menuPunkter">
+                    
                     <li>
                         <a href="/saltfisk.html"> Salt Fisk</a>
+                    </li>
+                    <li>
+                        <a href="/konkurrence.html"> konkurrence</a>
                     </li>
                     <li id="logoTopDesktop">
                         <a href="/">
