--- a/om os.html
+++ b/om os.html
@@ -70,6 +70,8 @@
                 <div id="gallery1">
                     <img src="images/v%C3%A6rdier%201-1%20kopi.png" alt="Værdier"/>
                      <img src="/images/V%C3%A6rdier%202-1.png" alt="Værdier 2">
+                    <img src="images/V%C3%A6rdier%203-1.png">
+                    <img src="images/V%C3%A6rdier%2041.png">
                 </div>
                 </div>      
         </section>
