--- a/om os.html
+++ b/om os.html
@@ -36,6 +36,9 @@
                     <li>
                         <a href="/saltfisk.html"> Salt Fisk</a>
                     </li>
+                    <li>
+                        <a href="/konkurrence.html"> konkurrence</a>
+                    </li>
                     <li id="logoTopDesktop">
                         <a href="/">
                             <img
@@ -71,7 +74,7 @@
                     <img src="images/v%C3%A6rdier%201-1%20kopi.png" alt="Værdier"/>
                      <img src="/images/V%C3%A6rdier%202-1.png" alt="Værdier 2">
                     <img src="images/V%C3%A6rdier%203-1.png">
-                    <img src="images/V%C3%A6rdier%2041.png">
+                    <img src="/images/V%C3%A6rdier%2041%20kopi.png">
                 </div>
                 </div>      
         </section>
