--- a/saltfisk.html
+++ b/saltfisk.html
@@ -36,6 +36,9 @@
                     <li>
                         <a href="/saltfisk.html"> Salt Fisk</a>
                     </li>
+                    <li>
+                        <a href="/konkurrence.html"> konkurrence</a>
+                    </li>
                     <li id="logoTopDesktop">
                         <a href="/">
                             <img
