--- a/kontakt.html
+++ b/kontakt.html
@@ -37,6 +37,9 @@
                     <li>
                         <a href="/saltfisk.html"> Salt Fisk</a>
                     </li>
+                    <li>
+                        <a href="/konkurrence.html"> konkurrence</a>
+                    </li>
                     <li id="logoTopDesktop">
                         <a href="/">
                             <img
