--- a/index.html
+++ b/index.html
@@ -68,10 +68,8 @@
             </a>
         </header>
         <main id="landingMain">
-            <section id="indhold">
-                <h1 id="contact"></h1>
-                 
-        </section>
+            <img src="images/mobillandingpage.png">
+
         </main>
 
         <footer>
@@ -80,7 +78,7 @@
                     <p>Kundeservice</p>
                     <p>FAQ</p>
                     <p>Kontakt</p>
-                    <p> &#169; 2020. All rights deserverd.</p>  
+                    <p> &#169;2020 Jenny Mae M. Berces. All rights deserverd.</p>  
                 </div>
                 <div id="socialmedie">
                     <a class="icons" href="/">
