--- a/index.html
+++ b/index.html
@@ -68,7 +68,8 @@
             </a>
         </header>
         <main id="landingMain">
-            <img src="images/mobillandingpage.png">
+            
+          <img id="Saltefisk" src="images/mobillandingpage2.png">
 
         </main>
 
