--- a/saltfisk.html
+++ b/saltfisk.html
@@ -68,7 +68,7 @@
          <main>
              <section id="indhold">
                 <h1 id="contact">Salt Fisk</h1>
-                 
+                 <img src="">
         </section>
         </main>
          <footer>
