--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <ul id="menuPunkter">
                     
                     <li>
-                        <a href="/saltfisk.html"> Salt Fisk</a>
+                        <a href="/saltfisk.html"> Salte Fisk</a>
                     </li>
                     <li>
                         <a href="/konkurrence.html"> konkurrence</a>
@@ -69,7 +69,9 @@
         </header>
         <main id="landingMain">
             
-          <img id="Saltefisk" src="images/mobillandingpage2.png">
+          <img id="Saltefisk" src="images/mobillandingpage2%20kopi.png">
+            <p id="landingpagekonkurrence"> Konkurrence</p>
+            <p>Vind kurv flyd med salte fisk</p>
 
         </main>
 
