--- a/saltefisk.html
+++ b/saltefisk.html
@@ -34,7 +34,7 @@
                 </a>
                 <ul id="menuPunkter">
                     <li>
-                        <a href="/saltfisk.html"> Salt Fisk</a>
+                        <a href="/saltfisk.html"> Salte Fisk</a>
                     </li>
                     <li>
                         <a href="/konkurrence.html"> konkurrence</a>
@@ -67,7 +67,7 @@
         </header>
          <main>
              <section id="indhold">
-                <h1 id="contact">Salt Fisk</h1>
+                <h1 id="contact">Salte Fisk</h1>
                  <img src="">
         </section>
         </main>
