--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                 </div>
                 <div id="socialmedie">
                     <a class="icons" href="/">
-                        <img src="/images/fb.png" alt="fb" />
+                        <img src="/images/fb-black-kopi.svg" alt="fb" />
                     </a>
                     <a class="icons" href="/">
                         <img src="/images/insta.png" alt="instagram" />
