--- a/saltefisk.html
+++ b/saltefisk.html
@@ -69,6 +69,8 @@
              <section id="indhold">
                 <h1 id="contact">Salte Fisk</h1>
                  <img src="">
+                 <img id="Saltefisk" src="images/mobillandingpage2%20kopi.png">
+                 <a id="læsmere" href="saltefisk.html"></a>     
         </section>
         </main>
          <footer>
