--- a/index.html
+++ b/index.html
@@ -90,10 +90,10 @@
                 </div>
                 <div id="socialmedie">
                     <a class="icons" href="/">
-                        <img src="/images/fb-black-kopi.svg" alt="fb" />
+                        <img src="/images/fb-white-kopi.png" alt="fb" />
                     </a>
                     <a class="icons" href="/">
-                        <img src="/images/insta.png" alt="instagram" />
+                        <img src="/images/instagramwhite-kopi.png" alt="instagram" />
                     </a>
 
                   
