--- a/saltefisk.html
+++ b/saltefisk.html
@@ -83,10 +83,10 @@
                 </div>
                 <div id="socialmedie">
                     <a class="icons" href="/">
-                        <img src="/images/fb.png" alt="fb" />
+                        <img src="/images/fb-white-kopi.png" alt="fb" />
                     </a>
                     <a class="icons" href="/">
-                        <img src="images/insta.png" alt="instagram" />
+                        <img src="/images/instagramwhite-kopi.png" alt="instagram" />
                     </a>
                 </div>
             </div>
