--- a/saltefisk.html
+++ b/saltefisk.html
@@ -69,7 +69,7 @@
              <section id="indhold">
                 <h1 id="contact">Salte Fisk</h1>
                  <img src="">
-                 <img id="Saltefisk" src="images/mobillandingpage2%20kopi.png">
+                 <img id="omos" src="/images/om%20os.jpg">
                  <a id="læsmere" href="saltefisk.html"></a>     
         </section>
         </main>
