--- a/kontakt.html
+++ b/kontakt.html
@@ -97,7 +97,7 @@
                     <p>Kundeservice</p>
                     <p>FAQ</p>
                     <p>Kontakt</p>
-                    <p> &#169; 2020. All rights deserverd.</p>  
+                    <p> &#169;2020 Jenny Mae M. Berces. All rights deserverd. .</p>  
                 </div>
                 <div id="socialmedie">
                     <a class="icons" href="/">
