--- a/saltefisk.html
+++ b/saltefisk.html
@@ -72,7 +72,7 @@
                  <img id="omos" src="/images/om%20os.jpg">
                  <a id="læsmere" href="saltefisk.html"></a>
                  
-                 <p id= "om saltefisk">De lækre saltede fisk kan også nydes af vegetarer da de nu er produceret uden animalsk gelatine . Den blødelakrids kommer fra lakridsroden glychrrhiza glabrabusken og er en nydelsefor lakrids kender.</p>
+                 <p id= "omsaltefisk">De lækre saltede fisk kan også nydes af vegetarer da de nu er produceret uden animalsk gelatine . Den blødelakrids kommer fra lakridsroden glychrrhiza glabrabusken og er en nydelsefor lakrids kender.</p>
         </section>
         </main>
          <footer>
@@ -81,7 +81,7 @@
                     <p>Kundeservice</p>
                     <p>FAQ</p>
                     <p>Kontakt</p>
-                    <p> &#169; 2020. All rights deserverd.</p>  
+                    <p> &#169; 2020 Jenny Mae M. Berces. All rights deserverd.</p>  
                 </div>
                 <div id="socialmedie">
                     <a class="icons" href="/">
