--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             </div> 
             
             <p id="landingpagekonkurrence"> Konkurrence</p>
-            <p id="Vindkurv">Vind kurv flyd med salte fisk</p>
+            <p id="Vindkurv">Vind kurv flyd med salte fisk.</p>
             <a id="deltageher" href="konkurrence.html">Deltag her
             </a>
 
