Rykket rund igen

--- a/saltefisk.html
+++ b/saltefisk.html
@@ -37,7 +37,7 @@
                         <a href="/saltfisk.html"> Salte Fisk</a>
                     </li>
                     <li>
-                        <a href="/konkurrence.html"> konkurrence</a>
+                        <a href="/om%20os.html"> Om os</a>
                     </li>
                     <li id="logoTopDesktop">
                         <a href="/">
@@ -48,7 +48,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="/om%20os.html"> Om os</a>
+                        <a href="/konkurrence.html"> Konkurrence</a>
                     </li>
                     <li>
                         <a href="kontakt.html"> Kontakt</a>
