--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                         <a href="saltefisk.html"> Salte Fisk</a>
                     </li>
                     <li>
-                        <a href="/konkurrence.html"> konkurrence</a>
+                        <a href="/om%20os.html"> Oms</a>
                     </li>
                     <li id="logoTopDesktop">
                         <a href="/">
@@ -50,7 +50,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="/om%20os.html"> Om os</a>
+                        <a href="konkurrence.html"> Konkurrence</a>
                     </li>
                     <li>
                         <a href="kontakt.html"> Kontakt</a>
@@ -86,7 +86,7 @@
                     <p>Kundeservice</p>
                     <p>FAQ</p>
                     <p>Kontakt</p>
-                    <p> &#169;2020 Jenny Mae M. Berces. All rights deserverd.</p>  
+                    <p> &#169;2020 Jenny Mae M. Berces. All rights deserverd.</p> 
                 </div>
                 <div id="socialmedie">
                     <a class="icons" href="/">
