--- a/kontakt.html
+++ b/kontakt.html
@@ -38,7 +38,7 @@
                         <a href="/saltfisk.html"> Salt Fisk</a>
                     </li>
                     <li>
-                        <a href="/konkurrence.html"> konkurrence</a>
+                        <a href="/om%20os.html"> Om os</a>
                     </li>
                     <li id="logoTopDesktop">
                         <a href="/">
@@ -49,7 +49,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="/om%20os.html"> Om os</a>
+                        <a href="/konkurrence.html"> Konkurrence</a>
                     </li>
                     <li>
                         <a href="kontakt.html"> Kontakt</a>
