--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <ul id="menuPunkter">
                     
                     <li>
-                        <a href="saltefisk.html"> Salte Fisk</a>
+                        <a href="/saltefisk.html"> Salte Fisk</a>
                     </li>
                     <li>
                         <a href="/om%20os.html"> Oms</a>
@@ -69,7 +69,7 @@
         </header>
         <main id="landingMain">
            <div id="mainlanding">
-          <img id="Saltefisk" src="images/mobillandingpage2%20kopi.png">
+          <img id="Saltefisk" src="/images/den%20rigtigt%20mobilpage-1.png">
             <a id="læsmere" href="saltefisk.html">Læs mere</a>
             </div> 
             
