--- a/konkurrence.html
+++ b/konkurrence.html
@@ -68,7 +68,17 @@
          <main>
              <section id="indhold">
                 <h1 id="contact">Konkurrence</h1>
-                 
+                <img src="">
+                 <img id="Konkurrence" src="/images/konkurrence2.png">
+                 <p id="vind">Vind en kurv flyd med salte fisk!</p>
+                 <p id= "foratdeltage">
+For at deltage, skal i uploade i 
+billede på instagram hvor i skal 
+placere en fisk - digitalt for 
+eksempel en fisk-emoji 
+eller fysisk og bruger hashtagget 
+#veggielove vi udloder en vinder.
+</p>
         </section>
         </main>
          <footer>
