--- a/om os.html
+++ b/om os.html
@@ -68,10 +68,11 @@
          <main>
              <section id="indhold">
                 <h1 id="contact">Om os</h1>
-                 <div class="gallery">
-                     
-                <div id="gallery1">
-                    
+                 <div class="Værdier">
+                <div id="værdierne">
+                    <img src="images/V%C3%A6rdie%201-3.png">
+                    <img src="images/V%C3%A6rdi%202-4.png">
+                    <img src="images/v%C3%A6rdi%203.png">
                 </div>
                 </div>      
         </section>
