Bare en lille opdate

--- a/om os.html
+++ b/om os.html
@@ -74,7 +74,16 @@
                     <img src="images/V%C3%A6rdi%202-4.png">
                     <img src="images/v%C3%A6rdi%203.png">
                 </div>
-                </div>      
+                </div> 
+                 <p id="omos">Det hele begyndte med en lille kat
+ og en lakridsopskrift medbragt af
+ Xaver Fassin fra Sicilien. Det dannede 
+grundlaget for at etablere vores stærke 
+Katjes-familie og skabe unikke produkter. 
+
+Foruden vores produkter er vores 
+virksomheds succes også baseret 
+på en meget speciel opskrift:  naturlighed, bæredygtig, miljø og kvalitet!</p>
         </section>
         </main>
          <footer>
