--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                         <a href="/saltefisk.html"> Salte Fisk</a>
                     </li>
                     <li>
-                        <a href="/om%20os.html"> Oms</a>
+                        <a href="/om%20os.html"> Om os</a>
                     </li>
                     <li id="logoTopDesktop">
                         <a href="/">
