--- a/om os.html
+++ b/om os.html
@@ -34,7 +34,7 @@
                 </a>
                 <ul id="menuPunkter">
                     <li>
-                        <a href="/saltfisk.html"> Salt Fisk</a>
+                        <a href="/saltefisk.html"> Salt Fisk</a>
                     </li>
                     <li>
                         <a href="/om%20os.html"> Om os</a>
