--- a/om os.html
+++ b/om os.html
@@ -89,9 +89,9 @@ på en meget speciel opskrift:  naturlighed, bæredygtig, miljø og kvalitet!</p
          <footer>
             <div class="footer">
                 <div id="textfooter">
-                    <p>Kundeservice</p>
-                    <p>FAQ</p>
                     <p>Kontakt</p>
+                    <p>FAQ</p>
+                    <p>Information</p>
                     <p> &#169; 2020 Jenny Mae M. Berces. All rights deserverd.</p>  
                 </div>
                 <div id="socialmedie">
