--- a/kontakt.html
+++ b/kontakt.html
@@ -94,9 +94,9 @@
         <footer>
             <div class="footer">
                 <div id="textfooter">
-                    <p>Kundeservice</p>
-                    <p>FAQ</p>
                     <p>Kontakt</p>
+                    <p>FAQ</p>
+                    <p>Information</p>
                     <p> &#169;2020 Jenny Mae M. Berces. All rights deserverd. .</p>  
                 </div>
                 <div id="socialmedie">
