--- a/index.html
+++ b/index.html
@@ -69,7 +69,8 @@
         </header>
         <main id="landingMain">
            <div id="mainlanding">
-          <img id="Saltefisk" src="/images/den%20rigtigt%20mobilpage-1.png">
+          <img id="Saltefiskmobil" src="/images/den%20rigtigt%20mobilpage-1.png">
+               <img id="saltefiskweb" src="images/landing%20page%20web2-2.png">
             <a id="læsmere" href="saltefisk.html">Læs mere</a>
             </div> 
             
