Image og footer skiftet farve

--- a/konkurrence.html
+++ b/konkurrence.html
@@ -28,7 +28,7 @@
                 </a>
                 <a id="logo" href="/">
                     <img
-                        src="images/Katjes-1.png"
+                        src="images/Katjes-2.png"
                         alt="Katjes Logo"
                     />
                 </a>
@@ -42,7 +42,7 @@
                     <li id="logoTopDesktop">
                         <a href="/">
                             <img
-                                src="images/Katjes-1.png"
+                                src="images/Katjes-2.png"
                                 alt="Katjes Logo"
                             />
                         </a>
@@ -60,7 +60,7 @@
             </a>
             <a id="logoTop" href="/">
                 <img
-                    src="images/Katjes-1.png"
+                    src="images/Katjes-2.png"
                     alt="Katjes Logo"
                 />
             </a>
@@ -69,7 +69,7 @@
              <section id="indhold">
                 <h1 id="contact">Konkurrence</h1>
                 <img src="">
-                 <img id="Konkurrence" src="/images/konkurrence2.png">
+                 <img id="Konkurrence" src="/images/IMG_2195.jpg">
                  <p id="vind">Vind en kurv flyd med salte fisk!</p>
                  <p id= "foratdeltage">
 For at deltage, skal i uploade i 
