--- a/kontakt.html
+++ b/kontakt.html
@@ -35,7 +35,7 @@
                 </a>
                 <ul id="menuPunkter">
                     <li>
-                        <a href="/saltfisk.html"> Salt Fisk</a>
+                        <a href="/saltefisk.html"> Salte Fisk</a>
                     </li>
                     <li>
                         <a href="/om%20os.html"> Om os</a>
