tilpasse salte fisk til web

--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
                 </a>
                 <ul id="menuPunkter">
                     
-                    <li>
+                    <li class="navlink">
                         <a href="/saltefisk.html"> Salte Fisk</a>
                     </li>
-                    <li>
+                    <li class="navlink">
                         <a href="/om%20os.html"> Om os</a>
                     </li>
                     <li id="logoTopDesktop">
@@ -49,10 +49,10 @@
                             />
                         </a>
                     </li>
-                    <li>
+                    <li class="navlink">
                         <a href="konkurrence.html"> Konkurrence</a>
                     </li>
-                    <li>
+                    <li class="navlink">
                         <a href="kontakt.html"> Kontakt</a>
                     </li>
                 </ul>
