--- a/kontakt.html
+++ b/kontakt.html
@@ -21,7 +21,7 @@
         />
     </head>
     <body>
-        <header id="landingHeader">
+         <header id="landingHeader">
             <!-- Navigationsmenu -->
             <nav id="menu">
                 <a href="#nav-toggle" class="material-icons" id="closeNav">
@@ -34,10 +34,11 @@
                     />
                 </a>
                 <ul id="menuPunkter">
-                    <li>
+                    
+                    <li class="navlink">
                         <a href="/saltefisk.html"> Salte Fisk</a>
                     </li>
-                    <li>
+                    <li class="navlink">
                         <a href="/om%20os.html"> Om os</a>
                     </li>
                     <li id="logoTopDesktop">
@@ -48,10 +49,10 @@
                             />
                         </a>
                     </li>
-                    <li>
-                        <a href="/konkurrence.html"> Konkurrence</a>
+                    <li class="navlink">
+                        <a href="konkurrence.html"> Konkurrence</a>
                     </li>
-                    <li>
+                    <li class="navlink">
                         <a href="kontakt.html"> Kontakt</a>
                     </li>
                 </ul>
@@ -67,9 +68,9 @@
             </a>
         </header>
          <main>
-            <section id="indhold">
+        
                 <h1 id="contact">Kontakt</h1>
-
+ <section id="indhold">
                 <form action="action_page.php" id="form">
                     <label for="Name"></label>
                     <input type="text" id="Name" placeholder="Navn:" />
