--- a/konkurrence.html
+++ b/konkurrence.html
@@ -72,6 +72,7 @@
                  
            <section id="indhold">
                  <img id="Konkurrence" src="/images/IMG_2195.jpg">
+               <div id="textkonkurrence">
                  <p id="vind">Vind en kurv flyd med salte fisk!</p>
                  <p id= "foratdeltage">
 For at deltage, skal i uploade i 
@@ -81,6 +82,7 @@ eksempel en fisk-emoji
 eller fysisk og bruger hashtagget 
 #veggielove vi udloder en vinder.
 </p>
+    </div>           
         </section>
         </main>
          <footer>
