--- a/om os.html
+++ b/om os.html
@@ -72,7 +72,7 @@
                  <div class="Værdier">
                 <div id="værdierne">
                     <img src="images/V%C3%A6rdie%201-3.png">
-                    <img src="images/V%C3%A6rdi%202-4.png">
+                    <img src="/images/V%C3%A6rdi%202-4.png">
                     <img src="images/v%C3%A6rdi%203.png">
                 </div>
                 </div> 
