--- a/om os.html
+++ b/om os.html
@@ -75,16 +75,18 @@
                     <img src="/images/V%C3%A6rdi%202-4.png">
                     <img src="images/v%C3%A6rdi%203.png">
                 </div>
-                </div> 
-                 <p id="omos">Det hele begyndte med en lille kat
+                </div>
+                
+                 <p id="Omos">Det hele begyndte med en lille kat
  og en lakridsopskrift medbragt af
  Xaver Fassin fra Sicilien. Det dannede 
 grundlaget for at etablere vores stærke 
-Katjes-familie og skabe unikke produkter. 
+Katjes-familie og skabe unikke produkter.</p> 
 
-Foruden vores produkter er vores 
+<p id="Omos2">Foruden vores produkter er vores 
 virksomheds succes også baseret 
-på en meget speciel opskrift:  naturlighed, bæredygtig, miljø og kvalitet!</p>
+på en meget speciel opskrift:  naturlighed, bæredygtig, miljø og kvalitet! </p>
+                    
         </section>
         </main>
          <footer>
